Made UI changes on energy page.  Aligned points, corrected and shrunk DEGG text.

--- a/makahiki/static/css/theme-default.css
+++ b/makahiki/static/css/theme-default.css
@@ -1028,13 +1028,15 @@ iframe{width:100%;height:300px;}
 fieldset legend{font-weight:bold;text-align:center;margin-bottom:0px;}
 td.energy-status-how-activities-content{vertical-align:text-top;}
 .energy-display-text{text-align:center;font-size:32pt;font-weight:bold;line-height:32pt;}
+.energy-legend-text{font-size:16pt;line-height:20pt;}
 .energy-power-box{padding:5px;margin-right:1em;}
 .energy-status-how-activities-content td:nth-child(even){padding-left:14px;}
 .energy-status-how-activities-content td:last-child,.energy-status-how-activities-content th:last-child{text-align:center;}
 .energy-status-how-activities-table th{text-align:left;padding-left:20px;}
+.energy-status-how-activities-table .energy-point-margin{padding-left:25px;}
 .energy-status-how-activities-table td{padding:4px 4px 4px 20px;text-align:left;}
 .energy-status-how-table,.energy-status-how-activities-content,.energy-status-how-activities-table{width:100%;}
-@media (max-width:920px){.energy-display-text{text-align:center;font-size:22pt;font-weight:bold;line-height:22pt;}}@charset "UTF-8";
+@media (max-width:920px){.energy-display-text{text-align:center;font-size:22pt;font-weight:bold;line-height:22pt;}}@media (max-width:920px){.energy-legend-text{font-size:14pt;line-height:18pt;}}@charset "UTF-8";
 #score-carousel th:last-child,#score-carousel td:last-child{text-align:center;}
 @charset "UTF-8";
 .scoreboard-message{font-size:12pt;margin-left:30px;margin-top:0.5em;text-align:center;}
