--- a/makahiki/static/less/widget-resource-goal.less
+++ b/makahiki/static/less/widget-resource-goal.less
@@ -16,11 +16,16 @@ td.energy-status-how-activities-content {
     line-height: 32pt;
 }
 
+.energy-legend-text {
+    font-size: 16pt;
+    line-height: 20pt;
+}
+
 .energy-power-box {
     padding: 5px;
     margin-right: 1em;
-}
-
+} 
+ 
 .energy-status-how-activities-content td:nth-child(even) {
     padding-left: 14px;
 }
@@ -33,6 +38,10 @@ td.energy-status-how-activities-content {
     text-align: left;
     padding-left: 20px;
 }
+ 
+.energy-status-how-activities-table .energy-point-margin {
+    padding-left: 36px;
+} 
 
 .energy-status-how-activities-table td {
     padding: 4px 4px 4px 20px;
@@ -49,6 +58,14 @@ td.energy-status-how-activities-content {
         font-size: 22pt;
         font-weight: bold;
         line-height: 22pt;
+    }
+}
+
+
+@media (max-width: 920px) {
+    .energy-legend-text { 
+        font-size: 14pt; 
+        line-height: 18pt;
     }
 }
 
